Disabling map resizing on mobile didn't work, so trying something else. Contact screen font changed from cursive to inherit. Modal skills have been fixed so that they wrap when the width it too small

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -250,6 +250,7 @@
     &--text {
       margin-left: 0.5rem;
       color: $grey-4;
+      white-space: nowrap;
 
       @media (max-width: 700px) {
         margin-left: 0.45rem;
