--- a/frontend/src/App/styles/components/_modal.scss
+++ b/frontend/src/App/styles/components/_modal.scss
@@ -14,12 +14,11 @@
 	}
 
 	&__skills {
-		display: flex;
-		align-items: center;
-		justify-content: space-around;
-		width: 100%;
-		margin: 1rem 0;
-
+		&--item {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 
 		&--icon {
 				
