--- a/frontend/src/App/styles/screens/_contact.scss
+++ b/frontend/src/App/styles/screens/_contact.scss
@@ -22,10 +22,11 @@
         &--input {
             width: 100%;
             height: 100%;
-            padding: 2rem;
+            padding: 1.5rem;
             outline: none;
             font-weight: 400;
-            font-family: 'Sacramento', cursive;
+            // font-family: 'Sacramento', cursive;
+            font-family: inherit;
 
             border-radius: 3px;
             border: 1px solid $grey-7;
